# mercurio-ai

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/mercurio-ai/: Cargo.toml
crates/mercurio-ai/src/: agent.rs  artifacts.rs  ask_mercurio.rs  context.rs  heuristic.rs  lib.rs  prompts.rs  provider.rs  provider_http.rs  provider_impls.rs  provider_prompts.rs  provider_registry.rs  provider_resolution.rs  schema.rs  tool_surface.rs  workbench.rs
