[package]
name = "mercurio-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../../mercurio-foundation/crates/mercurio-foundation" }
mercurio-requirements = { path = "../../../mercurio-sysml/crates/mercurio-requirements" }
mercurio-sysml = { path = "../../../mercurio-sysml/crates/mercurio-sysml" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
